--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.4.4",
+    "@babel/register": "^7.9.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -44,7 +44,9 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.1",
-    "nodemon": "^1.19.4"
+    "minimist": "^1.2.5",
+    "nodemon": "^2.0.2",
+    "set-value": "^3.0.1"
   },
   "eslintConfig": {
     "extends": "airbnb",
